--- a/fbTest/Views/Image/Index.cshtml
+++ b/fbTest/Views/Image/Index.cshtml
@@ -23,99 +23,101 @@
                 <li><a href="#">Employres</a></li>
                 <li><a href="#">Helpers</a></li>
                 <li><a href="#">resources </a></li>
-            </ul>
+                </ul>
+
+            <!----SignUp Button-->
             <ul class="nav navbar-nav navbar-right">
-                <li><a asp-controller="image" asp-action="SignUp" >Log in/ Sign up</a></li>
+                <li><a asp-controller="image" asp-action="SignUp">Log in/ Sign up</a></li>
             </ul>
+          </div>        
         </div>
-    </div>
-</nav>
+    </nav>
 
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-        <div class="item active">
-            <img src="http://www.changiairport.com/content/dam/cag/5-airport-experience/3-services-facilities/free_singapore_tour_900.jpg" alt="Los Angeles" style="width:100%" class="img-responsive">
-        </div>
-
-        <div class="item">
-            <img src="https://media.timeout.com/images/103704859/image.jpg" alt="Chicago" style="width:100%" class="img-responsive">
-        </div>
-
-        <div class="item">
-            <img src="http://static.asiawebdirect.com/m/phuket/portals/www-singapore-com/homepage/pagePropertiesImage/singapore.jpg" alt="New York" style="width:100%" class="img-responsive">
-        </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-<!----Button-->
-<div>
-    <a href="#" class="btn btn-primary btn-lg btn-block">Find a Helper in Singapore</a>
-</div>
-
-
-<div class="container">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="img-circle">
-                    <a href="http://maidsagency.com/images/vector1.jpg" target="_blank">
-                        <div class="caption">
-                            <p>Browse profiles OR post a job ad.</p>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="http://www.changiairport.com/content/dam/cag/5-airport-experience/3-services-facilities/free_singapore_tour_900.jpg" alt="Los Angeles" style="width:100%" class="img-responsive">
                         </div>
-                        <img src="http://maidsagency.com/images/vector1.jpg" class="img-responsive" alt="Maid" style="width:100%">
 
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="img-circle">
-                    <div class="caption">
-                        <p>Interview Candidates</p>
+                        <div class="item">
+                            <img src="https://media.timeout.com/images/103704859/image.jpg" alt="Chicago" style="width:100%" class="img-responsive">
+                        </div>
+
+                        <div class="item">
+                            <img src="http://static.asiawebdirect.com/m/phuket/portals/www-singapore-com/homepage/pagePropertiesImage/singapore.jpg" alt="New York" style="width:100%" class="img-responsive">
+                        </div>
                     </div>
-                    <a href="http://maidsagency.com/images/vector1.jpg" target="_blank">
-                        <img src="https://thumb7.shutterstock.com/display_pic_with_logo/1058333/118033585/stock-vector--illustration-of-cartoon-maid-with-broom-118033585.jpg" class="img-responsive" alt="Maid" style="width:100%">
-                    </a>
 
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="img-circle">
-                    <div class="caption">
-                        <p>Get Matched!</p>
+
+
+                <!---Button-->
+                <div>
+                    <a href="#" class="btn btn-primary btn-lg btn-block">Find a Helper in Singapore</a>
+                </div>
+
+
+                <div class="container">
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ol>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="img-circle">
+                                    <a href="http://maidsagency.com/images/vector1.jpg" target="_blank">
+                                        <div class="caption">
+                                            <p>Browse profiles OR post a job ad.</p>
+                                        </div>
+                                        <img src="http://maidsagency.com/images/vector1.jpg" class="img-responsive" alt="Maid" style="width:100%">
+
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="img-circle">
+                                    <div class="caption">
+                                        <p>Interview Candidates</p>
+                                    </div>
+                                    <a href="http://maidsagency.com/images/vector1.jpg" target="_blank">
+                                        <img src="https://thumb7.shutterstock.com/display_pic_with_logo/1058333/118033585/stock-vector--illustration-of-cartoon-maid-with-broom-118033585.jpg" class="img-responsive" alt="Maid" style="width:100%">
+                                    </a>
+
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="img-circle">
+                                    <div class="caption">
+                                        <p>Get Matched!</p>
+                                    </div>
+                                    <a href="https://thumb7.shutterstock.com/display_pic_with_logo/1058333/118033585/stock-vector--illustration-of-cartoon-maid-with-broom-118033585.jpg" target="_blank">
+                                        <img src="https://thumbs.dreamstime.com/z/cute-cartoon-vector-illustration-maid-kids-professions-series-69004077.jpg" class="img-responsive" alt="Maid" style="width:100%">
+                                    </a>
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <a href="https://thumb7.shutterstock.com/display_pic_with_logo/1058333/118033585/stock-vector--illustration-of-cartoon-maid-with-broom-118033585.jpg" target="_blank">
-                        <img src="https://thumbs.dreamstime.com/z/cute-cartoon-vector-illustration-maid-kids-professions-series-69004077.jpg" class="img-responsive" alt="Maid" style="width:100%">
-                    </a>
-
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-
 
