--- a/fbTest/Views/Image/SignUp.cshtml
+++ b/fbTest/Views/Image/SignUp.cshtml
@@ -1,26 +1,24 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-{
+@{
     ViewData["Title"] = "SignUp";
 }
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="btn-group btn-group-justified">
-                <a href="#" class="btn btn-primary btn-lg btn-block">Sign Up with Facebook</a>
-            </div>
-            <div>
-                <p>-------------Or-----------------</p>
-            </div>
-            <div>
-                <a href="#" class="btn btn-primary btn-lg btn-block">Sign Up with Email</a>
-            </div>
-            <div>
-                <p>
-                    Already a member ? <a href="Log in" target="_blank">Log in</a>
-                </p>
-            </div>
-        </div>
-    </div>
+<div class="btn-group btn-group-justified">
+   @* <a href="#" class="btn btn-primary btn-lg btn-block">Sign Up with Facebook</a> *@
+    <a class="btn btn-primary btn-lg btn-block" asp-controller="Account" asp-action="Login">Sign Up with Facebook</a>
 </div>
+
+<div>
+    <p>-------------Or-----------------</p>
+</div>
+<div>
+    @* <a href="#" class="btn btn-primary btn-lg btn-block">Sign Up with Email</a> *@
+    <a class="btn btn-primary btn-lg btn-block" asp-controller="Account" asp-action="Login">Sign Up with Email</a>
+</div>
+<div>
+    <p>
+        Already a member ? <a href="Log in" target="_blank">Log in</a>
+    </p>
+</div>
+
