--- a/fbTest/Views/Image/Index.cshtml
+++ b/fbTest/Views/Image/Index.cshtml
@@ -23,16 +23,24 @@
                 <li><a href="#">Employres</a></li>
                 <li><a href="#">Helpers</a></li>
                 <li><a href="#">resources </a></li>
-                </ul>
+            </ul>
 
             <!----SignUp Button-->
             <ul class="nav navbar-nav navbar-right">
                 <li><a asp-controller="image" asp-action="SignUp">Log in/ Sign up</a></li>
             </ul>
-          </div>        
         </div>
-    </nav>
+    </div>
+</nav>
 
+
+<!---BreadCrumbs-->
+<div class="col-md-12">
+    <ul class="breadcrumb">
+        <li><a asp-controller="image" asp-action="TAndC">Home</a></li>
+        <li><a asp-controller="image" asp-action="TAndC">Terms & Conditions</a></li>
+    </ul>
+</div>
 
                 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
                     <!-- Indicators -->
