--- a/fbTest/Views/Image/SignUp.cshtml
+++ b/fbTest/Views/Image/SignUp.cshtml
@@ -18,7 +18,7 @@
 </div>
 <div>
     <p>
-        Already a member ? <a href="Log in" target="_blank">Log in</a>
+        Already a member ? <a asp-controller="Account" asp-action="Login">Log in</a>
     </p>
 </div>
 
