--- a/fbTest/Views/Image/Index.cshtml
+++ b/fbTest/Views/Image/Index.cshtml
@@ -23,6 +23,7 @@
                 <li><a href="#">Employres</a></li>
                 <li><a href="#">Helpers</a></li>
                 <li><a href="#">resources </a></li>
+                <li><a asp-controller="image" asp-action="TAndC">T&C</a></li>
             </ul>
 
             <!----SignUp Button-->
@@ -35,11 +36,14 @@
 
 
 <!---BreadCrumbs-->
+<div class="container">
 <div class="col-md-12">
-    <ul class="breadcrumb">
-        <li><a asp-controller="image" asp-action="TAndC">Home</a></li>
-        <li><a asp-controller="image" asp-action="TAndC">Terms & Conditions</a></li>
+    <ul class="breadcrumb ">
+        <li class="active"><a asp-controller="image" asp-action="Index">Home</a></li>
+        
+       @* <li class="active">Data</li>*@
     </ul>
+</div>
 </div>
 
                 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
@@ -77,13 +81,13 @@
                 </div>
 
 
-                <!---Button-->
+                <!---Find Helper Button-->
                 <div>
                     <a href="#" class="btn btn-primary btn-lg btn-block">Find a Helper in Singapore</a>
                 </div>
 
 
-                <div class="container">
+                
                     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
@@ -126,6 +130,15 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Left and right controls -->
+                        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
-                </div>
+                
 
