--- a/fbTest/Views/Image/TAndC.cshtml
+++ b/fbTest/Views/Image/TAndC.cshtml
@@ -7,6 +7,18 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
+            <ul class="breadcrumb">
+                <li><a asp-controller="image" asp-action="Index">Home</a></li>
+                <li class="active">Terms & Conditions</li>
+
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
             <h2>Terms and Conditions</h2>
         </div>
     </div>
