--- a/fbTest/Views/Image/Index.cshtml
+++ b/fbTest/Views/Image/Index.cshtml
@@ -19,11 +19,12 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">About us</a></li>
+                <li><a asp-controller="image" asp-action="AboutUs">About Us</a></li>
                 <li><a href="#">Employres</a></li>
                 <li><a href="#">Helpers</a></li>
                 <li><a href="#">resources </a></li>
                 <li><a asp-controller="image" asp-action="TAndC">T&C</a></li>
+                
             </ul>
 
             <!----SignUp Button-->
