--- a/fbTest/Views/Image/TAndC.cshtml
+++ b/fbTest/Views/Image/TAndC.cshtml
@@ -4,22 +4,25 @@
 @{
     ViewData["Title"] = "TAndC";
 }
-<div class="container">
+<div class="container" >
     <div class="row">
         <div class="col-md-12">
             <ul class="breadcrumb">
                 <li><a asp-controller="image" asp-action="Index">Home</a></li>
                 <li class="active">Terms & Conditions</li>
-
             </ul>
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
+<div class="container" >
+    <div class="row" >
+        <div class="col-md-12" data-spy="affix-top">
             <h2>Terms and Conditions</h2>
         </div>
     </div>
 </div>
+
+<body data-spy="scroll">
+    <div class="container-fluid"></div>
+</body>
